--- a/src/scss/_bg.scss
+++ b/src/scss/_bg.scss
@@ -53,7 +53,7 @@
   bottom: 5%; 
 }
 .bg-dice {
-  background-image: url(~assets/images/bg-dice.png);
+  background-image: url(~assets/images/bg-dice1.png);
   position: absolute;
   width: 147px;
   height: 142px;
