--- a/src/scss/_variable.scss
+++ b/src/scss/_variable.scss
@@ -303,7 +303,7 @@ $secondary:     #FFB800 !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
-$danger:        #951205 !default;
+$danger:        #9C0700 !default;
 $light:         $gray-100 !default;
 $dark:          $gray-900 !default;
 //
