--- a/src/scss/_variable.scss
+++ b/src/scss/_variable.scss
@@ -299,8 +299,8 @@ $cyans: (
 
 // scss-docs-start theme-color-variables
 $primary:       #1C8B6A !default;
-$secondary:     #FFB800 !default;
-$success:       $green !default;
+$secondary:     #FF7E06 !default;
+$success:       #009A50 !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        #9C0700 !default;
@@ -309,7 +309,6 @@ $dark:          $gray-900 !default;
 //
 $purple:        #1C8B6A;
 $gray:          #B7B7B7;
-$orange:        #FFB800;
 // $white:         #ffffff;
 // scss-docs-end theme-color-variables
 
