--- a/src/scss/_btn.scss
+++ b/src/scss/_btn.scss
@@ -13,4 +13,7 @@
   background: #000000;
   box-shadow: 8px 8px 0px rgba(0, 0, 0, 0.5);
   border-radius: 20px;
+  &:hover {
+    transform: scale(1.05);
+  }
 }
